fix: add some spacing after content
So things don't look so chopped off

--- a/packages/www/src/site.css
+++ b/packages/www/src/site.css
@@ -104,11 +104,7 @@ a:hover {
 
 .content {
     min-height: calc(100vh - contentTop);
-    margin-top: contentTop;
-}
-
-.bd > :last-child{
-    margin-bottom: 5rem;
+    margin: contentTop 1rem 5rem 1rem;
 }
 
 .bd h2 {
